UI/css/styles.css
/* ... */
header {
  background-color: #161b33;
  height: 80px;
  padding: 20px 10px 15px 0;
}

.logo {
  display: inline;
  margin-left: 10px;
  color: #a69cac;
  font-size: 30px;
  font-family: 'Kumar One Outline', cursive;
  text-transform: capitalize;
  border: 1px solid #a69cac8f; 
  border-right: none;
  border-top: none;
  border-radius: 50px 50px 50px 0;
  background: #a69cac17;
}

.logo span {
  font-size: 25px;
  color: #ffffff3d;
}

.nav-link {
  display: none;
}

#hamburger-menu {
  float: right;
  margin-top: -45px;
  font-size: 30px;
  color: #a69cac;
  cursor: pointer;
  border: none;
  transition: .3s;
}

#hamburger-menu:hover {
  color: #bfdbf7;
}

.sidebar {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #0d0c1d;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 80px;
}

.sidebar a {
  padding: 8px 8px 8px 8px;
  text-decoration: none;
  font-size: 18px;
  color: #a69cac;
  border-bottom: 1px solid #a69cac;
  border-radius: 1px;
  display: block;
  transition: 0.3s;
}

.sidebar a:last-child {
  border: none;
}

.sidebar a:hover {
  color: #e1e5f2;
}

#page {
  position: relative;
  transition: margin .5s;

}

.page-body {
  min-height: calc(100vh - 130px);
  text-align: center;
  padding: 15px;
}

.page-body h1 {
  margin-bottom: 20px;
  color: #0d1b2a;
}

.page-body p {
  font-size: 22px;
  margin: 0 10px 0 10px;
  color: #0d1b2a;
}

.landing-page {
  padding: 0 0 20px 0;
}

.body-image {
  height: 350px;
  width: 100%;
  background: linear-gradient(#1f2d747a,#161b335a), url('../img/banka.jpg') no-repeat center center fixed;
  background-size: cover;
  Padding: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.body-image h1{
  font-size: 4rem;
  color: #fff;
  text-transform: uppercase;
}

.body-text{
  margin-top: 20px;
}

.box {
  max-width: calc(100vw - 50px);
  margin: 20px auto auto;
  background: #d1cbd4;
  border-radius: 10px;
  padding: 25px 15px 15px;
  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
}

.page-body #start {
  color: #e0e0e0;
  background: #0d1b2a;
  border: 1px solid #1b263b;
  border-radius: 50px;
  height: 45px;
  width: 120px;
  padding: 5px;
}

.page-body #start:hover {
  color: #e0e0e0;
  background: #133253;
}

.box h2{
  font-size: 18px;
  margin-left: 0;
}

.form-title {
  float: left;
  font: Helvetica;
  font-size: 20px;
  color: #161b33;
  margin-bottom: 5px;
}

.log-in {
  margin-top: 10px;
}

.form-segment {
  margin: 5px 0 10px 0;
}

.form-label {
  float: left;
  color: #474973;
}

.form-input {
  background-color: transparent;
  width: 100%;
  height: 45px;
  border: 0;
  border-bottom: 1px solid #a69cac;
  padding: 10px;
}

input:focus {
  outline: none;
  transition: border 1.5s;
  border-bottom: 1px solid #0d0c1d;
}

input::placeholder {
  color: #47497379;
  font-style: italic;
}

 .switch {
  position: relative;
  width: 60px;
  height: 34px;
  float: left;
}

.account-operations .switch {
  margin-left: 25%;
  margin: 10px 0 0 25%;
}

.account-operations .item-label {
  color: #ff000069;
  font-size: 12px;
  font-style: italic;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: #a69cac;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #474973;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.slider.round {
  border-radius: 34px;
  border: 1px solid #161b33;
}

.slider.round:before {
  border-radius: 50%;
}

.instruction {
  color: #ff00007c;
  font-style: italic;
}

.submit-btn {
  height: 45px;
  width: 100%;
  color: #a69cac;
  background-color: #0d0c1d;
  border: 1px solid #0d1b2a;
  border-radius: 10px;
  margin-top: 10px;
  transition: .5s;
}

.submit-btn:hover{
  background-color: #1b263b;
}

.forgot-p {
  display: inline-block;
  margin-top: 20px;
  color: #474973;
  text-decoration: none;
}

.profile,
.admin {
  padding: 0;
}

.profile-header {
  padding: 1px;
  margin: 0 auto;
  background-image: linear-gradient(to bottom right, #a69cacab, #f1dac4ab); 
}

#user-photo {
  width: 150px;
  height: 150px;
  margin: 15px auto;
  border: 2px solid #161b33;
  border-radius: 50%; 
  overflow: hidden;
}

#user-photo img {
  width: 150px;
  height: 150px;
  display: block;
}

#user-name {
  color: #161b33;
}

.tab {
  overflow: hidden;
  background-color: inherit;
}

.tab button {
  background: none;
  border: none;
  border-bottom: 1px solid #474973;
  color: #161b33;
  font-size: 16px;
  width: 32%;
  height: 35px;
  outline: none;
  cursor: pointer;
  transition: 0.2s;
}

.admin .tab button {
  width: 48%;
}

.tab button:last-child {
  border-right: none;
}

.tab button:hover {
  background: rgba(255, 255, 255, 0.212);
  border-bottom: 2px solid #474973;
}

.tab button.active {
  background-color: #a69cac;
  border-bottom: 3px solid #0d0c1d;
}

button::-moz-focus-inner { 
  border: 0; 
}

.tabcontent {
  margin-top: 5px;
  display: none;
  padding: 6px 12px;
  border-top: none;
}

.profile-item {
  background: #a69cac;
  border-radius: 5px;
  overflow: auto;
  padding: 10px;
  margin: 0 0 15px 0;
  display: flex;
  flex-direction: column;
}

.transaction-item {
  background: #a69cac;
  border-radius: 5px;
  overflow: auto;
  padding: 10px;
  margin: 0 0 15px 0;
  display: flex;
}

.account-item {
  background: #a69cac;
  border-radius: 5px;
  overflow: auto;
  padding: 10px;
  margin: 0 0 15px 0;
  display: flex;
  justify-content: space-around;
}

.bal span.item-content{
  color: green;
  font-size: 18px;
}

.credit {
  color: green;
}

.debit {
  color: red;
}
/* ... */

